<?xml version="1.0"?>
<package format="2">
  <name>hw1_turtlesim</name>
  <version>0.0.0</version>
  <description>The hw1_turtlesim package</description>

  <maintainer email="beomjun0330@gmail.com">beomjunkim</maintainer>
  <license>MIT</license>
  <url type="website">https://carnelian-stag-290.notion.site/bd2e51be5f504848a7cf3a3537d507e1</url>
  <url type="repository">https://github.com/oroca/oroca_ros_tutorials.git</url>
  <author email="beomjun0330@gmail.com">beomjunkim</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
